[package]
name = "oneprog-contest"
version = "0.1.0-dev"
authors = ["OneProg <jade.weirdo@gmail.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7.2", features = ["router", "fullstack"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
